--- a/android/build.gradle
+++ b/android/build.gradle
@@ -86,7 +86,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'me.creese.soliter/me.creese.soliter.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'me.creese.soliter/AndroidLauncher'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
